syntax = "proto3";

package api.protobuf;
option go_package = "github.com/b2network/b2-indexer/api/protobuf/vo";

import "google/protobuf/struct.proto";

message MpcCheckRequest {
  string callbackId = 1;
  string requestType = 2;
  google.protobuf.Struct requestDetail = 3;
  google.protobuf.Struct extraInfo = 4;
}

message MpcCheckResponse  {
  string status = 1;
  string error = 2;
  google.protobuf.Struct data = 3;
  string signature = 4;
};